--- a/packages/config-danger/package.json
+++ b/packages/config-danger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airbnb/config-danger",
-  "version": "1.2.4",
+  "version": "2.0.0-alpha.0",
   "description": "Reusable Danger.js scripts.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
