--- a/packages/config-prettier/package.json
+++ b/packages/config-prettier/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airbnb/config-prettier",
-  "version": "1.1.4",
+  "version": "2.0.0-alpha.0",
   "description": "Reusable Prettier config.",
   "main": "index.js",
   "repository": {
@@ -16,9 +16,9 @@
     "@types/prettier": "^1.18.2"
   },
   "dependencies": {
+    "@airbnb/nimbus-common": "^2.0.0-alpha.0",
     "@beemo/core": "^1.0.5",
     "@beemo/driver-prettier": "^1.0.3",
-    "@airbnb/nimbus-common": "^1.2.0",
     "prettier": "^1.18.2"
   }
 }
