--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airbnb/config-typescript",
-  "version": "1.2.1",
+  "version": "2.0.0-alpha.0",
   "description": "Reusable TypeScript configs.",
   "main": "lib/index.js",
   "repository": {
