--- a/packages/config-webpack/package.json
+++ b/packages/config-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airbnb/config-webpack",
-  "version": "1.3.4",
+  "version": "2.0.0-alpha.0",
   "description": "Reusable Webpack configs.",
   "main": "index.js",
   "repository": {
@@ -16,7 +16,7 @@
     "nimbus-webpack-server": "./bin/server"
   },
   "dependencies": {
-    "@airbnb/nimbus-common": "^1.2.0",
+    "@airbnb/nimbus-common": "^2.0.0-alpha.0",
     "@babel/core": "^7.5.5",
     "@beemo/core": "^1.0.5",
     "@beemo/driver-webpack": "^1.0.4",
