--- a/packages/nimbus-common/package.json
+++ b/packages/nimbus-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airbnb/nimbus-common",
-  "version": "1.2.0",
+  "version": "2.0.0-alpha.0",
   "description": "Common Nimbus utilities and constants.",
   "main": "index.js",
   "repository": {
