--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -16,8 +16,8 @@
     "@airbnb/nimbus-common": "^2.0.0-alpha.2",
     "@beemo/core": "^1.0.5",
     "@beemo/driver-eslint": "^1.0.5",
-    "@typescript-eslint/eslint-plugin": "~2.1.0",
-    "@typescript-eslint/parser": "~2.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
