--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -16,14 +16,14 @@
     "@airbnb/nimbus-common": "^2.0.0-alpha.2",
     "@beemo/core": "^1.0.5",
     "@beemo/driver-eslint": "^1.0.5",
-    "@typescript-eslint/eslint-plugin": "~2.0.0",
-    "@typescript-eslint/parser": "~2.0.0",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.15.2",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
