--- a/packages/config-babel/package.json
+++ b/packages/config-babel/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-babel",
   "version": "2.0.0-alpha.3",
   "description": "Reusable Babel config.",
+  "keywords": ["nimbus", "config", "babel"],
   "main": "index.js",
   "repository": {
     "type": "git",
