--- a/packages/config-danger/package.json
+++ b/packages/config-danger/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-danger",
   "version": "2.0.0-alpha.3",
   "description": "Reusable Danger.js scripts.",
+  "keywords": ["nimbus", "config", "danger", "scripts"],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
