--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-typescript",
   "version": "2.0.0-alpha.4",
   "description": "Reusable TypeScript configs.",
+  "keywords": ["nimbus", "config", "typescript"],
   "main": "lib/index.js",
   "repository": {
     "type": "git",
