--- a/packages/config-webpack/package.json
+++ b/packages/config-webpack/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-webpack",
   "version": "2.0.0-alpha.4",
   "description": "Reusable Webpack configs.",
+  "keywords": ["nimbus", "config", "webpack"],
   "main": "index.js",
   "repository": {
     "type": "git",
