--- a/packages/nimbus-common/package.json
+++ b/packages/nimbus-common/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/nimbus-common",
   "version": "2.0.0-alpha.3",
   "description": "Common Nimbus utilities and constants.",
+  "keywords": ["nimbus", "config", "common", "utils"],
   "main": "index.js",
   "repository": {
     "type": "git",
