build: Final polish before release. (#5)
* Update beemo.

* Update Babel.

* Add changelogs.

* Add keywords.

* Update readmes.

--- a/packages/config-babel/package.json
+++ b/packages/config-babel/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-babel",
   "version": "2.0.0-alpha.3",
   "description": "Reusable Babel config.",
+  "keywords": ["nimbus", "config", "babel"],
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -14,18 +15,18 @@
   },
   "dependencies": {
     "@airbnb/nimbus-common": "^2.0.0-alpha.3",
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-optional-catch-binding": "^7.2.0",
     "@babel/plugin-transform-react-jsx-self": "^7.2.0",
     "@babel/plugin-transform-react-jsx-source": "^7.5.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@beemo/core": "^1.0.5",
-    "@beemo/driver-babel": "^1.0.3",
+    "@babel/preset-typescript": "^7.6.0",
+    "@beemo/core": "^1.0.6",
+    "@beemo/driver-babel": "^1.0.4",
     "babel-plugin-graphql-tag": "^2.5.0",
     "babel-plugin-idx": "^2.4.0",
     "babel-plugin-transform-dev": "^2.0.1",
