--- a/packages/config-prettier/package.json
+++ b/packages/config-prettier/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-prettier",
   "version": "2.0.0-alpha.3",
   "description": "Reusable Prettier config.",
+  "keywords": ["nimbus", "config", "prettier"],
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   },
   "dependencies": {
     "@airbnb/nimbus-common": "^2.0.0-alpha.3",
-    "@beemo/core": "^1.0.5",
+    "@beemo/core": "^1.0.6",
     "@beemo/driver-prettier": "^1.0.3",
     "prettier": "^1.18.2"
   }
