--- a/packages/config-danger/package.json
+++ b/packages/config-danger/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-danger",
   "version": "2.0.0-alpha.3",
   "description": "Reusable Danger.js scripts.",
+  "keywords": ["nimbus", "config", "danger", "scripts"],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
@@ -14,10 +15,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@types/node": "^12.7.4"
+    "@types/node": "^12.7.5"
   },
   "dependencies": {
     "conventional-changelog-beemo": "^1.5.0",
-    "danger": "^9.1.8"
+    "danger": "^9.2.0"
   }
 }
