--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-typescript",
   "version": "2.0.0-alpha.4",
   "description": "Reusable TypeScript configs.",
+  "keywords": ["nimbus", "config", "typescript"],
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -13,8 +14,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@beemo/core": "^1.0.5",
-    "@beemo/driver-typescript": "^1.1.2",
-    "typescript": "^3.6.2"
+    "@beemo/core": "^1.0.6",
+    "@beemo/driver-typescript": "^1.1.3",
+    "typescript": "^3.6.3"
   }
 }
