--- a/packages/config-webpack/package.json
+++ b/packages/config-webpack/package.json
@@ -2,6 +2,7 @@
   "name": "@airbnb/config-webpack",
   "version": "2.0.0-alpha.4",
   "description": "Reusable Webpack configs.",
+  "keywords": ["nimbus", "config", "webpack"],
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -17,9 +18,9 @@
   },
   "dependencies": {
     "@airbnb/nimbus-common": "^2.0.0-alpha.3",
-    "@babel/core": "^7.5.5",
-    "@beemo/core": "^1.0.5",
-    "@beemo/driver-webpack": "^1.0.4",
+    "@babel/core": "^7.6.0",
+    "@beemo/core": "^1.0.6",
+    "@beemo/driver-webpack": "^1.0.5",
     "babel-loader": "^8.0.6",
     "execa": "^2.0.4",
     "fast-glob": "^3.0.4",
@@ -27,7 +28,7 @@
     "html-webpack-plugin": "^3.2.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "is-docker": "^2.0.0",
-    "terser-webpack-plugin": "^2.0.0",
+    "terser-webpack-plugin": "^2.0.1",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
