--- a/packages/nimbus-common/package.json
+++ b/packages/nimbus-common/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@airbnb/nimbus-common",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "Common Nimbus utilities and constants.",
-  "keywords": ["nimbus", "config", "common", "utils"],
+  "keywords": [
+    "nimbus",
+    "config",
+    "common",
+    "utils"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
