--- a/packages/config-danger/package.json
+++ b/packages/config-danger/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@airbnb/config-danger",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "Reusable Danger.js scripts.",
-  "keywords": ["nimbus", "config", "danger", "scripts"],
+  "keywords": [
+    "nimbus",
+    "config",
+    "danger",
+    "scripts"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
