--- a/packages/config-jest/package.json
+++ b/packages/config-jest/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@airbnb/config-jest",
-  "version": "2.0.0-alpha.4",
+  "version": "2.0.0",
   "description": "Reusable Jest config.",
-  "keywords": ["nimbus", "config", "jest"],
+  "keywords": [
+    "nimbus",
+    "config",
+    "jest"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -17,7 +21,7 @@
     "@types/jest": "^24.0.18"
   },
   "dependencies": {
-    "@airbnb/nimbus-common": "^2.0.0-alpha.3",
+    "@airbnb/nimbus-common": "^2.0.0",
     "@babel/core": "^7.6.0",
     "@beemo/core": "^1.0.6",
     "@beemo/driver-babel": "^1.0.4",
