--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -19,6 +19,7 @@
     "removeComments": false,
     "strict": true,
     "target": "es2018",
+    "useDefineForClassFields": false,
     "composite": true,
     "declarationMap": true
   }
