--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,21 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 install:
   - yarn install --frozen-lockfile --ignore-engines
-before_script:
-  - yarn run build
 jobs:
   fast_finish: true
   include:
     - name: PR Checks
       if: type = pull_request
       script: yarn beemo run-script pull-request-checks
+      node_js: '12'
+    - name: Test @ 8
+      script: yarn test
+      node_js: '8'
+    - name: Test @ 10
+      script: yarn test
+      node_js: '8'
+    - name: Test @ 12
+      script: yarn test
       node_js: '12'
 notifications:
   email: false
