--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@ babel.config.js
 jest.config.js
 prettier.config.js
 *.tsbuildinfo
+tsconfig.json
 tsconfig.eslint.json
+tsconfig.options.json
 webpack.config.js
