--- a/packages/config-jest/package.json
+++ b/packages/config-jest/package.json
@@ -29,5 +29,10 @@
     "airbnb-js-shims": "^2.2.1",
     "dom-storage": "^2.1.0",
     "jest": "^24.9.0"
+  },
+  "optionalPeerDependencies": {
+    "aphrodite": "^4.0.0",
+    "enzyme": "^3.0.0",
+    "enzyme-to-json": "^3.0.0"
   }
 }
