Convert nimbus scripts.

--- a/packages/nimbus/package.json
+++ b/packages/nimbus/package.json
@@ -10,7 +10,7 @@
     "developer",
     "tool"
   ],
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:airbnb/nimbus.git"
