--- a/packages/nimbus/package.json
+++ b/packages/nimbus/package.json
@@ -38,5 +38,14 @@
     "edit-json-file": "^1.3.2",
     "enquirer": "^2.3.2",
     "execa": "^3.3.0"
+  },
+  "devDependencies": {
+    "@airbnb/config-babel": "*",
+    "@airbnb/config-danger": "*",
+    "@airbnb/config-eslint": "*",
+    "@airbnb/config-jest": "*",
+    "@airbnb/config-prettier": "*",
+    "@airbnb/config-typescript": "*",
+    "@airbnb/config-webpack": "*"
   }
 }
