--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 install:
   - yarn install --frozen-lockfile --ignore-engines
+  - yarn run setup
 jobs:
   fast_finish: true
   include:
