--- a/packages/config-webpack/package.json
+++ b/packages/config-webpack/package.json
@@ -27,7 +27,7 @@
     "@beemo/driver-webpack": "^1.2.2",
     "babel-loader": "^8.0.6",
     "execa": "^4.0.0",
-    "fast-glob": "^3.2.1",
+    "fast-glob": "^3.2.2",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
@@ -36,7 +36,7 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-graphql-loader": "^1.0.2"
   },
