breaking: Upgrade to Node v10. Drop v8.

--- a/packages/config-prettier/package.json
+++ b/packages/config-prettier/package.json
@@ -17,6 +17,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=10.16.0"
+  },
   "devDependencies": {
     "@types/prettier": "^1.19.0"
   },
