--- a/packages/config-babel/package.json
+++ b/packages/config-babel/package.json
@@ -17,6 +17,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=10.16.0"
+  },
   "dependencies": {
     "@airbnb/nimbus-common": "^2.1.3",
     "@babel/cli": "^7.8.4",
