--- a/packages/config-danger/package.json
+++ b/packages/config-danger/package.json
@@ -19,6 +19,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=10.16.0"
+  },
   "devDependencies": {
     "@types/node": "^13.7.4"
   },
