--- a/packages/config-jest/package.json
+++ b/packages/config-jest/package.json
@@ -17,6 +17,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=10.16.0"
+  },
   "devDependencies": {
     "@types/jest": "^25.1.3"
   },
