--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -17,6 +17,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "engines": {
+    "node": ">=10.16.0"
+  },
   "dependencies": {
     "@beemo/core": "^1.1.4",
     "@beemo/driver-typescript": "^1.3.2",
