internal: Fix build based on changes.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "setup": "tsc --build && beemo create-config eslint prettier",
     "build": "beemo typescript --build --reference-workspaces",
     "clean": "rm -rf packages/*/{lib,*.tsbuildinfo}",
-    "test": "yarn run build && yarn run jest && yarn run eslint",
-    "eslint": "beemo eslint .",
+    "test": "yarn run build && yarn run jest && yarn run lint",
+    "lint": "beemo eslint .",
     "jest": "beemo jest",
     "prettier": "beemo prettier",
     "prerelease": "yarn run clean && yarn run test",
