--- a/packages/config-webpack/package.json
+++ b/packages/config-webpack/package.json
@@ -44,6 +44,7 @@
     "webpack-graphql-loader": "^1.0.2"
   },
   "devDependencies": {
+    "@types/html-minifier-terser": "^5.0.0",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack-bundle-analyzer": "^2.13.3"
